_sources/examples/03-Circuit/Create_Netlist.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\03-Circuit\Create_Netlist.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_03-Circuit_Create_Netlist.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_03-Circuit_Create_Netlist.py:


Circuit: netlist to schematic iport
------------------------------------
# This example shows how to import netlist data into a circuit design.
# HSPICE files are supported. Mentor files are partially supported.

.. GENERATED FROM PYTHON SOURCE LINES 9-12

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports and set paths.

.. GENERATED FROM PYTHON SOURCE LINES 12-32

.. code-block:: default


    # sphinx_gallery_thumbnail_path = 'Resources/schematic.png'
    import os

    # Import required modules
    from pyaedt import examples
    import tempfile

    netlist = examples.download_netlist()
    from pyaedt import generate_unique_name

    # Set local path to path for PyAEDT
    tmpfold = tempfile.gettempdir()
    temp_folder = os.path.join(tmpfold, generate_unique_name("Example"))
    if not os.path.exists(temp_folder):
        os.makedirs(temp_folder)
    myfile = os.path.join(netlist)
    print(temp_folder)






.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    D:\Temp\Example_517WR9




.. GENERATED FROM PYTHON SOURCE LINES 33-36

Import main classes
~~~~~~~~~~~~~~~~~~~
Import the main classes that are needed: :class:`pyaedt.Desktop` and :class:`pyaedt.Circuit`.

.. GENERATED FROM PYTHON SOURCE LINES 36-40

.. code-block:: default


    from pyaedt import Circuit
    from pyaedt import Desktop








.. GENERATED FROM PYTHON SOURCE LINES 41-44

Launch AEDT
~~~~~~~~~~~
Launch AEDT 2022 R2 in graphical mode. This example uses SI units.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. code-block:: default


    desktopVersion = "2022.2"









.. GENERATED FROM PYTHON SOURCE LINES 49-52

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 52-56

.. code-block:: default


    non_graphical = os.getenv("PYAEDT_NON_GRAPHICAL", "False").lower() in ("true", "1", "t")
    NewThread = True








.. GENERATED FROM PYTHON SOURCE LINES 57-63

Launch AEDT with Circuit
~~~~~~~~~~~~~~~~~~~~~~~
Launch AEDT with Circuit. The :class:`pyaedt.Desktop` class initializes AEDT
and starts it on the specified version in the specified graphical mode. The Boolean
parameter ``NewThread`` defines whether to create a new instance of AEDT or try
to connect to an existing instance of it.

.. GENERATED FROM PYTHON SOURCE LINES 63-67

.. code-block:: default


    desktop = Desktop(desktopVersion, non_graphical, NewThread)
    aedtapp = Circuit()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    pyaedt info: Logger Started
    pyaedt info: Launching PyAEDT outside AEDT with CPython and PythonNET.
    pyaedt info: AEDT installation Path C:\Program Files\AnsysEM\v222\Win64.
    pyaedt info: Launching AEDT with module PythonNET.
    pyaedt info: Ansoft.ElectronicsDesktop.2022.2 Started with process ID 10540.
    pyaedt info: Logger file D:\Temp\pyaedt20220722_091734.log in use.
    pyaedt info: pyaedt v0.5.9
    pyaedt info: Python version 3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]
    pyaedt info: Project Project51 has been created.
    pyaedt info: No design is present. Inserting a new design.
    pyaedt info: Added design 'Circuit Design_H6R' of type Circuit Design.
    pyaedt info: Aedt Objects initialized
    pyaedt info: Variable Manager initialized
    pyaedt info: Design Loaded
    pyaedt info: Successfully loaded project materials !
    pyaedt info: Materials Loaded




.. GENERATED FROM PYTHON SOURCE LINES 68-71

Save project to temporary folder
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Save the project to the temporary folder. You can change this folder.

.. GENERATED FROM PYTHON SOURCE LINES 71-74

.. code-block:: default


    aedtapp.save_project(os.path.join(temp_folder, "my_firt_netlist.aedt"))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    pyaedt info: Project my_firt_netlist Saved correctly

    True



.. GENERATED FROM PYTHON SOURCE LINES 75-78

Define design variable
~~~~~~~~~~~~~~~~~~~~~~
Define a design variable by using a ``$`` prefix.

.. GENERATED FROM PYTHON SOURCE LINES 78-81

.. code-block:: default


    aedtapp["Voltage"] = "5"








.. GENERATED FROM PYTHON SOURCE LINES 82-87

Create schematic from netlist file
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a schematic from a netlist file. The ``create_schematic_from_netlist``
method reads the netlist file and parses it. All components are parsed
but only these specified categories are mapped: R, L, C, Q, U, J, V, and I.

.. GENERATED FROM PYTHON SOURCE LINES 87-90

.. code-block:: default


    aedtapp.create_schematic_from_netlist(myfile)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    pyaedt error: Method create_symbol Failed:  General or AEDT Error. Please Check again
    Method create_symbol Failed:  General or AEDT Error. Please Check again
    pyaedt error: (-2147417851, 'The server threw an exception.', None, None)
    (-2147417851, 'The server threw an exception.', None, None)
    pyaedt error: Arguments Provided: 
    Arguments Provided: 
    pyaedt error:     symbol_name = Models_Netlist 
        symbol_name = Models_Netlist 
    pyaedt error:     pin_lists = [] 
        pin_lists = [] 
    pyaedt error: Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    pyaedt error: Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    ['NAME:Models_Netlist', 'Info:=', ['Type:=', 0, 'NumTerminals:=', 0, 'DataSource:=', '', 'ModifiedOn:=', '', 'Manufacturer:=', '', 'Symbol:=', 'Models_Netlist', 'ModelNames:=', '', 'Footprint:=', '', 'Description:=', '', 'InfoTopic:=', '', 'InfoHelpFile:=', '', 'IconFile:=', '', 'Library:=', '', 'OriginalLocation:=', 'Project', 'IEEE:=', '', 'Author:=', '', 'OriginalAuthor:=', '', 'CreationDate:=', '', 'ExampleFile:=', '', 'HiddenComponent:=', 0, 'CircuitEnv:=', 0, 'GroupID:=', 0], 'CircuitEnv:=', 0, 'Refbase:=', 'x', 'NumParts:=', 1, 'ModSinceLib:=', True, 'CompExtID:=', 1, ['NAME:Parameters', 'ButtonProp:=', ['CosimDefinition', 'D', '', 'Edit', 'Edit', 40501, 'ButtonPropClientData:=', []], 'MenuProp:=', ['CoSimulator', 'D', '', 'DefaultNetlist', 0]], ['NAME:CosimDefinitions', ['NAME:CosimDefinition', 'CosimulatorType:=', 4, 'CosimDefName:=', 'DefaultNetlist', 'IsDefinition:=', True, 'Connect:=', True, 'Data:=', ['Nexxim Circuit:=', 'x@ID '], 'GRef:=', ['Nexxim Circuit:=', '']], 'DefaultCosim:=', 'DefaultNetlist']]
    pyaedt error: Method create_symbol Failed:  General or AEDT Error. Please Check again
    Method create_symbol Failed:  General or AEDT Error. Please Check again
    pyaedt error: (-2147417851, 'The server threw an exception.', None, None)
    (-2147417851, 'The server threw an exception.', None, None)
    pyaedt error: Arguments Provided: 
    Arguments Provided: 
    pyaedt error:     symbol_name = STS6NF20V 
        symbol_name = STS6NF20V 
    pyaedt error:     pin_lists = ['Pin1', 'Pin2', 'Pin3', 'Pin4', 'Pin5', 'Pin6', 'Pin7', 'Pin8'] 
        pin_lists = ['Pin1', 'Pin2', 'Pin3', 'Pin4', 'Pin5', 'Pin6', 'Pin7', 'Pin8'] 
    pyaedt error: Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    pyaedt error: Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    ['NAME:STS6NF20V', 'Info:=', ['Type:=', 0, 'NumTerminals:=', 8, 'DataSource:=', '', 'ModifiedOn:=', 1591858313, 'Manufacturer:=', '', 'Symbol:=', 'STS6NF20V', 'ModelNames:=', '', 'Footprint:=', '', 'Description:=', '', 'InfoTopic:=', '', 'InfoHelpFile:=', '', 'IconFile:=', '', 'Library:=', '', 'OriginalLocation:=', 'Project', 'IEEE:=', '', 'Author:=', '', 'OriginalAuthor:=', '', 'CreationDate:=', 1591858313, 'ExampleFile:=', '', 'HiddenComponent:=', 0, 'CircuitEnv:=', 0, 'GroupID:=', 0], 'CircuitEnv:=', 0, 'Refbase:=', 'Q', 'NumParts:=', 1, 'ModSinceLib:=', True, 'Terminal:=', ['Pin1', 'Pin1', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin2', 'Pin2', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin3', 'Pin3', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin4', 'Pin4', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin5', 'Pin5', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin6', 'Pin6', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin7', 'Pin7', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin8', 'Pin8', 'A', False, 0, 1, '', 'Electrical', '0'], 'CompExtID:=', 1, ['NAME:Parameters', 'TextValueProp:=', ['MOD', 'D', '', 'STS6NF20V'], 'ButtonProp:=', ['CosimDefinition', 'D', '', 'Edit', 'Edit', 40501, 'ButtonPropClientData:=', []], 'MenuProp:=', ['CoSimulator', 'D', '', 'DefaultNetlist', 0]], ['NAME:CosimDefinitions', ['NAME:CosimDefinition', 'CosimulatorType:=', 4, 'CosimDefName:=', 'DefaultNetlist', 'IsDefinition:=', True, 'Connect:=', True, 'Data:=', ['Nexxim Circuit:=', 'Q@ID %0 STS6NF20V %1 STS6NF20V %2 STS6NF20V %3 STS6NF20V %4 STS6NF20V %5 STS6NF20V %6 STS6NF20V %7 STS6NF20V @MOD '], 'GRef:=', ['Nexxim Circuit:=', '']], 'DefaultCosim:=', 'DefaultNetlist']]
    pyaedt error: Method create_symbol Failed:  General or AEDT Error. Please Check again
    Method create_symbol Failed:  General or AEDT Error. Please Check again
    pyaedt error: (-2147417851, 'The server threw an exception.', None, None)
    (-2147417851, 'The server threw an exception.', None, None)
    pyaedt error: Arguments Provided: 
    Arguments Provided: 
    pyaedt error:     symbol_name = CON4 
        symbol_name = CON4 
    pyaedt error:     pin_lists = ['Pin1', 'Pin2', 'Pin3', 'Pin4', 'Pin5'] 
        pin_lists = ['Pin1', 'Pin2', 'Pin3', 'Pin4', 'Pin5'] 
    pyaedt error: Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    pyaedt error: Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    ['NAME:CON4', 'Info:=', ['Type:=', 0, 'NumTerminals:=', 5, 'DataSource:=', '', 'ModifiedOn:=', 1591858313, 'Manufacturer:=', '', 'Symbol:=', 'CON4', 'ModelNames:=', '', 'Footprint:=', '', 'Description:=', '', 'InfoTopic:=', '', 'InfoHelpFile:=', '', 'IconFile:=', '', 'Library:=', '', 'OriginalLocation:=', 'Project', 'IEEE:=', '', 'Author:=', '', 'OriginalAuthor:=', '', 'CreationDate:=', 1591858313, 'ExampleFile:=', '', 'HiddenComponent:=', 0, 'CircuitEnv:=', 0, 'GroupID:=', 0], 'CircuitEnv:=', 0, 'Refbase:=', 'J', 'NumParts:=', 1, 'ModSinceLib:=', True, 'Terminal:=', ['Pin1', 'Pin1', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin2', 'Pin2', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin3', 'Pin3', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin4', 'Pin4', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin5', 'Pin5', 'A', False, 0, 1, '', 'Electrical', '0'], 'CompExtID:=', 1, ['NAME:Parameters', 'TextValueProp:=', ['MOD', 'D', '', 'CON4'], 'ButtonProp:=', ['CosimDefinition', 'D', '', 'Edit', 'Edit', 40501, 'ButtonPropClientData:=', []], 'MenuProp:=', ['CoSimulator', 'D', '', 'DefaultNetlist', 0]], ['NAME:CosimDefinitions', ['NAME:CosimDefinition', 'CosimulatorType:=', 4, 'CosimDefName:=', 'DefaultNetlist', 'IsDefinition:=', True, 'Connect:=', True, 'Data:=', ['Nexxim Circuit:=', 'J@ID %0 CON4 %1 CON4 %2 CON4 %3 CON4 %4 CON4 @MOD '], 'GRef:=', ['Nexxim Circuit:=', '']], 'DefaultCosim:=', 'DefaultNetlist']]
    pyaedt error: Method create_symbol Failed:  General or AEDT Error. Please Check again
    Method create_symbol Failed:  General or AEDT Error. Please Check again
    pyaedt error: (-2147417851, 'The server threw an exception.', None, None)
    (-2147417851, 'The server threw an exception.', None, None)
    pyaedt error: Arguments Provided: 
    Arguments Provided: 
    pyaedt error:     symbol_name = DCH010505SN7 
        symbol_name = DCH010505SN7 
    pyaedt error:     pin_lists = ['Pin1', 'Pin2', 'Pin3', 'Pin4'] 
        pin_lists = ['Pin1', 'Pin2', 'Pin3', 'Pin4'] 
    pyaedt error: Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    Error in :   File "C:\actions-runner\_work\PyAEDT\PyAEDT\pyaedt\modeler\PrimitivesCircuit.py", line 841, in create_symbol
    pyaedt error: Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    Check Online documentation on: https://aedtdocs.pyansys.com/search.html?q=create_symbol
    ['NAME:DCH010505SN7', 'Info:=', ['Type:=', 0, 'NumTerminals:=', 4, 'DataSource:=', '', 'ModifiedOn:=', 1591858313, 'Manufacturer:=', '', 'Symbol:=', 'DCH010505SN7', 'ModelNames:=', '', 'Footprint:=', '', 'Description:=', '', 'InfoTopic:=', '', 'InfoHelpFile:=', '', 'IconFile:=', '', 'Library:=', '', 'OriginalLocation:=', 'Project', 'IEEE:=', '', 'Author:=', '', 'OriginalAuthor:=', '', 'CreationDate:=', 1591858313, 'ExampleFile:=', '', 'HiddenComponent:=', 0, 'CircuitEnv:=', 0, 'GroupID:=', 0], 'CircuitEnv:=', 0, 'Refbase:=', 'U', 'NumParts:=', 1, 'ModSinceLib:=', True, 'Terminal:=', ['Pin1', 'Pin1', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin2', 'Pin2', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin3', 'Pin3', 'A', False, 0, 1, '', 'Electrical', '0'], 'Terminal:=', ['Pin4', 'Pin4', 'A', False, 0, 1, '', 'Electrical', '0'], 'CompExtID:=', 1, ['NAME:Parameters', 'TextValueProp:=', ['MOD', 'D', '', 'DCH010505SN7'], 'ButtonProp:=', ['CosimDefinition', 'D', '', 'Edit', 'Edit', 40501, 'ButtonPropClientData:=', []], 'MenuProp:=', ['CoSimulator', 'D', '', 'DefaultNetlist', 0]], ['NAME:CosimDefinitions', ['NAME:CosimDefinition', 'CosimulatorType:=', 4, 'CosimDefName:=', 'DefaultNetlist', 'IsDefinition:=', True, 'Connect:=', True, 'Data:=', ['Nexxim Circuit:=', 'U@ID %0 DCH010505SN7 %1 DCH010505SN7 %2 DCH010505SN7 %3 DCH010505SN7 @MOD '], 'GRef:=', ['Nexxim Circuit:=', '']], 'DefaultCosim:=', 'DefaultNetlist']]
    pyaedt info: Netlist was correctly imported into Circuit Design_H6R

    True



.. GENERATED FROM PYTHON SOURCE LINES 91-95

Close project and release AEDT
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
After adding any other desired functionalities, close the project and release
AEDT.

.. GENERATED FROM PYTHON SOURCE LINES 95-98

.. code-block:: default


    if os.name != "posix":
        desktop.release_desktop()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  9.177 seconds)


.. _sphx_glr_download_examples_03-Circuit_Create_Netlist.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: Create_Netlist.py <Create_Netlist.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: Create_Netlist.ipynb <Create_Netlist.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
